[package]
name = "sov-rollup-interface"
description = "Defines interfaces for building rollups with the Sovereign SDK"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
exclude = ["specs/assets/*"]


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true }
bytes = { workspace = true, optional = true, default-features = true }
digest = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
# TODO: Remove tokio when https://github.com/Sovereign-Labs/sovereign-sdk/issues/1161 is resolved
tokio = { workspace = true, optional = true }

# Proptest should be a dev-dependency, but those can't be optional
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }

[features]
default = [ "std" ]
native = [ "futures", "std", "tokio" ]
arbitrary = [ "proptest", "proptest-derive", "sha2", "std" ]
std = [
	"anyhow/default",
	"anyhow/std",
	"borsh/bytes",
	"borsh/default",
	"borsh/std",
	"bytes",
	"digest/default",
	"digest/std",
	"futures?/std",
	"hex/default",
	"hex/std",
	"proptest?/std",
	"serde/default",
	"serde/std",
	"serde_json/std",
	"sha2?/default",
	"sha2?/std",
	"thiserror",
]
