[package]
name = "sov-celestia-adapter"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true, features = ["bytes"] }
bech32 = "0.9.1"
prost = "0.12"
# I keep this commented as a reminder to opportunity to optimze this crate for non native compilation
#tendermint = { version = "0.32", default-features = false, features = ["std"] }

celestia-proto = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "66b7c6c" }
celestia-rpc = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "66b7c6c", default-features = false, optional = true }
celestia-types = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "66b7c6c", default-features = false }
tendermint = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "ef58b85", default-features = false }
tendermint-proto = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "ef58b85" }
nmt-rs = { git = "https://github.com/Sovereign-Labs/nmt-rs.git", rev = "d821332", features = [
    "serde",
    "borsh",
] }

# Convenience
async-trait = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true, features = ["serde"] }
jsonrpsee = { version = "0.20", features = ["http-client"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
futures = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
risc0-cycle-macros = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"], optional = true }
risc0-zkvm-platform = { workspace = true, optional = true }

sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }


[dev-dependencies]
postcard = { version = "1", features = ["use-std"] }
proptest = { workspace = true, features = ["std"] }
sov-celestia-adapter = { path = ".", features = ["native"] }
wiremock = "0.5"
tokio = { workspace = true,  features = ["test-util", "macros"] }

[features]
default = []
native = [
	"dep:celestia-rpc",
	"dep:futures",
	"dep:jsonrpsee",
	"dep:serde_json",
	"dep:tokio",
	"sov-celestia-adapter/native",
	"sov-rollup-interface/native",
	"tendermint/default",
]
risc0 = [
	"dep:risc0-cycle-macros",
	"dep:risc0-zkvm",
	"dep:risc0-zkvm-platform",
	"sov-celestia-adapter/risc0",
]
bench = [ "risc0", "risc0-cycle-macros?/bench", "sov-celestia-adapter/bench" ]
