[package]
name = "sov-mock-da"
description = "Mock implementation of Data Availability layer for testing purposes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true, features = ["bytes"] }
bytes = { workspace = true, features = ["serde"] }
serde = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true, features = ["std"] }
tracing = { workspace = true }

sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }

[dev-dependencies]
bincode = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
sov-mock-da = { path = ".", features = ["native"] }

[features]
default = []
native = [
	"dep:futures",
	"dep:tokio",
	"sov-mock-da/native",
	"sov-rollup-interface/native",
]
