[package]
name = "sov-mock-zkvm"
description = "Mock zkVM implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
digest = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
sov-rollup-interface = { workspace = true }

hex = { workspace = true }
ed25519-dalek = { version = "2", features = ["serde"] }
sha2 = { version = "0.10.6" }
thiserror = { workspace = true }
schemars = { workspace = true, optional = true }
arbitrary = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
sov-mock-zkvm = { path = ".", features = ["native"] }

[features]
default = []
native = [
    "ed25519-dalek/default",
    "ed25519-dalek/rand_core",
    "rand",
    "sov-mock-zkvm/native",
    "sov-rollup-interface/native",
]
arbitrary = [
    "dep:arbitrary",
    "sov-mock-zkvm/arbitrary",
    "sov-rollup-interface/arbitrary",
]
