[package]
name = "sov-risc0-adapter"
authors = { workspace = true }
description = "An adapter allowing Risc0 to be used with the Sovereign SDK"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
risc0-zkvm-platform = { workspace = true }
risc0-zkp = { workspace = true, optional = true }
risc0-circuit-rv32im = { workspace = true, optional = true }
serde = { workspace = true }
bytemuck = "1.14.1"
once_cell = { version = "1.19.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
risc0-cycle-utils = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }
hex = { workspace = true }
tracing = { workspace = true }

[features]
default = []
native = [
	"dep:risc0-circuit-rv32im",
	"dep:risc0-zkp",
	"risc0-cycle-utils/native",
	"risc0-zkvm/prove",
	"sov-rollup-interface/native",
]
bench = [ "native", "once_cell", "parking_lot", "risc0-cycle-utils/native" ]

[[test]]
name = "native"
required-features = ["native"]
