[package]
name = "sov-risc0-adapter"
authors = { workspace = true }
description = "An adapter allowing Risc0 to be used with the Sovereign SDK"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = "README.md"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
risc0-zkvm-platform = { workspace = true }
risc0-zkp = { workspace = true, optional = true }
risc0-circuit-rv32im = { workspace = true, optional = true }
serde = { workspace = true }
bytemuck = "1.14.1"
once_cell = { workspace = true, optional = true }
parking_lot = { version = "0.12.1", optional = true }
risc0-cycle-utils = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }
hex = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true, optional = true }

sha2 = { version = "0.10.6" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.0-risczero.1", features = ["serde"] }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0"}

arbitrary = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[features]
default = []
native = [
	"dep:risc0-circuit-rv32im",
	"dep:risc0-zkp",
	"ed25519-dalek/default",
	"ed25519-dalek/rand_core",
	"rand",
	"risc0-cycle-utils/native",
	"risc0-zkvm/prove",
	"sov-rollup-interface/native",
]
bench = [ "native", "once_cell", "parking_lot", "risc0-cycle-utils/native" ]
arbitrary = [ "dep:arbitrary", "sov-rollup-interface/arbitrary" ]

[[test]]
name = "native"
required-features = ["native"]
