[package]
name = "sov-rollup-interface"
description = "Defines interfaces for building rollups with the Sovereign SDK"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
exclude = ["specs/assets/*"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }
async-trait = { workspace = true }
backon = { workspace = true, optional = true }
borsh = { workspace = true }
bytes = { workspace = true, default-features = true }
derive_more = { workspace = true, features = ["as_ref"] }
digest = { workspace = true }
futures = { workspace = true, optional = true, features = ["alloc"] }
hex = { workspace = true }
# Proptest should be a dev-dependency, but those can't be optional
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true }
# TODO: Remove tokio when https://github.com/Sovereign-Labs/sovereign-sdk/issues/1161 is resolved
tokio = { workspace = true, optional = true, features = ["sync", "rt", "macros"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
serde_json = { workspace = true }

sov-rollup-interface = { path = ".", features = ["native", "arbitrary"] }

[features]
native = [
    "backon",
    "futures",
    "schemars",
    "sov-rollup-interface/native",
    "tokio",
    "tracing",
]
arbitrary = [
    "dep:arbitrary",
    "proptest",
    "proptest-derive",
    "sha2",
    "sov-rollup-interface/arbitrary",
]
