[package]
name = "sov-demo-rollup"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
publish = false
resolver = "2"
default-run = "sov-demo-rollup"

[lints]
workspace = true

[dependencies]
# non-optional dependencies
sov-celestia-adapter = { workspace = true, features = ["native"] }
sov-mock-da = { workspace = true, features = ["native"] }
const-rollup-config = { workspace = true }
sov-stf-runner = { workspace = true }
sov-rollup-interface = { workspace = true, features = ["native"] }

sov-modules-rollup-blueprint = { workspace = true, features = ["native"] }
sov-kernels = { workspace = true, features = ["native"] }
sov-modules-stf-blueprint = { workspace = true, features = ["native"] }
sov-modules-api = { workspace = true, features = ["native"] }
sov-bank = { workspace = true }
demo-stf = { workspace = true, features = ["native"] }
risc0 = { path = "./provers/risc0" }
sp1 = { path = "./provers/sp1" }
borsh = { workspace = true, features = ["bytes"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
backon = { workspace = true }
jsonrpsee = { workspace = true, features = [
    "http-client",
    "server",
    "ws-client",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true, optional = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "tracing",
] }
tracing = { workspace = true }
prometheus_exporter = "0.8.5"

sov-db = { workspace = true }
sov-ethereum = { workspace = true, features = ["local"] }
sov-sequencer = { workspace = true }
sov-risc0-adapter = { workspace = true, features = ["native"] }
sov-sp1-adapter = { workspace = true, features = ["native"] }
sov-mock-zkvm = { workspace = true, features = ["native"] }
sov-state = { workspace = true, features = ["native"] }
sov-cli = { workspace = true }
clap = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
sov-cycle-utils = { workspace = true, optional = true }

[dev-dependencies]
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
sov-risc0-adapter = { workspace = true, features = ["native", "arbitrary"] }
sov-sp1-adapter = { workspace = true, features = ["native", "arbitrary"] }
sov-celestia-adapter = { workspace = true, features = ["native", "arbitrary"] }
sov-mock-zkvm = { workspace = true, features = ["native", "arbitrary"] }
sov-rollup-interface = { workspace = true, features = ["arbitrary"] }
sov-modules-api = { workspace = true, features = [
    "native",
    "arbitrary",
    "test-utils",
] }
sov-mock-da = { workspace = true, features = ["arbitrary"] }
sov-bank = { workspace = true, features = ["native"] }
sov-sequencer-registry = { workspace = true, features = ["native"] }
sov-accounts = { workspace = true, features = ["native"] }
sov-api-spec = { workspace = true }
sov-modules-macros = { workspace = true }
sov-test-utils = { workspace = true }
sov-chain-state = { workspace = true }
sov-blob-storage = { workspace = true }
sov-value-setter = { workspace = true, features = ["native"] }
humantime = "2.1"
reth-primitives = { workspace = true }
futures = { workspace = true }
demo-stf-json-client = { workspace = true }

hex = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
rand = { workspace = true }

ethereum-types = { workspace = true }
ethers-core = { workspace = true }
ethers-middleware = { workspace = true }
ethers-providers = { workspace = true }
ethers-signers = { workspace = true }

reqwest = { workspace = true, features = ["rustls-tls"] }
prettytable-rs = "^0.10"
criterion = "0.5.1"

[build-dependencies]
sov-universal-wallet = { workspace = true, features = ["serde"] }
sov-modules-api = { workspace = true }
sov-mock-zkvm = { workspace = true, features = ["native"] }
sov-mock-da = { workspace = true, features = ["native"] }
serde_json = { workspace = true }
demo-stf = { workspace = true, features = ["native"] }

[features]
default = []
# Used for using different encoding between host and guest
bincode = ["risc0/bincode", "sov-risc0-adapter/bincode"]
bench = [
    "hex",
    "risc0/bench",
    "sp1/bench",
    "sov-celestia-adapter/bench",
    "sov-modules-api/bench",
    "sov-modules-stf-blueprint/bench",
    "sov-risc0-adapter/bench",
    "sov-state/bench",
    "sov-sequencer-registry/bench",
    "sov-sp1-adapter/bench",
    "sov-cycle-utils",
]

[[bench]]
name = "rollup_bench"
path = "benches/node/rollup_bench.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "rollup_coarse_measure"
path = "benches/node/rollup_coarse_measure.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "prover_bench"
path = "benches/prover/prover_bench.rs"
harness = false
required-features = ["bench"]

[[bin]]
name = "sov-cli"
path = "src/sov-cli/main.rs"

[[bin]]
name = "sov-demo-rollup"
path = "src/main.rs"
