[package]
name = "demo-simple-stf"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
resolver = "2"
publish = false

[lints.rust]
dead_code = "deny"
non_ascii_idents = "deny" # Bad for readability and it can also be a security vulnerability

# In case you need inspiration for new lints to add to the list, this is a good
# reference: <https://github.com/EmbarkStudios/rust-ecosystem/blob/6783ae1573d62f3f5439b8ff9e04bec191ec2eaf/lints.toml>.
[lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"
float_arithmetic = "deny"              # Can cause subtle bugs due to different behavior between native and zkVM execution.

[dependencies]
serde = { version = "1.0.208", default-features = false, features = [
    "alloc",
    "derive",
] }
sha2 = { version = "0.10.8", default-features = false }

sov-rollup-interface = { path = "../../crates/rollup-interface", default-features = false }

[dev-dependencies]
sov-mock-da = { path = "../../crates/adapters/mock-da", features = ["native"] }
sov-mock-zkvm = { path = "../../crates/adapters/mock-zkvm", features = ["native"] }

[features]
native = [
    "sov-rollup-interface/native",
]
