[package]
name = "demo-simple-stf"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
resolver = "2"
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true, default-features = false, features = [
    "alloc",
    "derive",
] }
sha2 = { workspace = true, default-features = false }

sov-rollup-interface = { workspace = true }

[dev-dependencies]
sov-mock-da = { workspace = true, features = ["native"] }
sov-mock-zkvm = { workspace = true, features = ["native"] }

[features]
native = [
    "sov-rollup-interface/native",
    "sov-mock-da/native",
    "sov-mock-zkvm/native"
]
