[package]
name = "simple-nft-module"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
serde = { workspace = true }

sov-modules-api = { path = "../../module-system/sov-modules-api" }
sov-state = { path = "../../module-system/sov-state" }

schemars = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }

[dev-dependencies]
serde_json = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface" }
sov-test-utils = { path = "../../module-system/sov-test-utils" }
tempfile = { workspace = true }
simple-nft-module = { version = "*", features = ["native"], path = "." }
sov-prover-storage-manager = { path = "../../full-node/sov-prover-storage-manager", features = ["test-utils"] }

[features]
default = []
native = [
    "jsonrpsee",
    "schemars",
    "simple-nft-module/native",
    "sov-modules-api/native",
    "sov-rollup-interface/native",
    "sov-state/native",
]
test = ["native"]
