[package]
name = "universal-wallet-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
borsh = { workspace = true }
sov-rollup-interface = { workspace = true }
sov-universal-wallet = { workspace = true }
sov-value-setter = { workspace = true }
sov-accounts = { workspace = true }
sov-bank = { workspace = true }
sov-test-utils = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
sov-rollup-interface = { workspace = true }
sov-accounts = { workspace = true }
sov-universal-wallet = { workspace = true }
sov-value-setter = { workspace = true }
sov-bank = { workspace = true }
sov-test-utils = { workspace = true }

[lints]
workspace = true
